Ajout du dossier image et mise à jour de index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center mt-5 mt-lg-0">
-                    <img src="https://via.placeholder.com/400x400/007ACC/FFFFFF?text=CM" 
+                    <img src="image/Screenshot_20251108-094440.png" 
                          alt="Christien MIGHERI" 
                          class="img-fluid rounded-circle profile-image">
                 </div>
